WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139691
Subpixel rendering: Animating HTML elements leaves trails when embedded to a subpxiel positioned iframe.
https://bugs.webkit.org/show_bug.cgi?id=139691
Summary
Subpixel rendering: Animating HTML elements leaves trails when embedded to a ...
alan
Reported
2014-12-16 11:56:41 PST
Steps to Reproduce: 1. go to
http://www.w3schools.com/jquery/tryit.asp?filename=tryjquery_animation1
2. click on the "Start animation" button on the right panel
Attachments
Test reduction.
(433 bytes, text/html)
2014-12-16 11:57 PST
,
alan
no flags
Details
Patch
(51.01 KB, patch)
2014-12-16 13:08 PST
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-mountainlion-wk2
(657.31 KB, application/zip)
2014-12-16 13:27 PST
,
Build Bot
no flags
Details
Patch
(9.58 KB, patch)
2014-12-16 13:46 PST
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-mountainlion-wk2
(505.29 KB, application/zip)
2014-12-16 14:18 PST
,
Build Bot
no flags
Details
Patch
(9.77 KB, patch)
2014-12-16 15:28 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-12-16 11:57:06 PST
rdar://problem/19078958
alan
Comment 2
2014-12-16 11:57:46 PST
Created
attachment 243374
[details]
Test reduction.
alan
Comment 3
2014-12-16 13:08:29 PST
Created
attachment 243380
[details]
Patch
Simon Fraser (smfr)
Comment 4
2014-12-16 13:16:37 PST
Comment on
attachment 243380
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=243380&action=review
> Source/WebCore/rendering/RenderBox.cpp:2191 > + // FIXME: This is needed as long as RenderWidget snaps to integral size/position. > + if (isRenderReplaced() && isWidget()) > + locationOffset = toIntSize(flooredIntPoint(locationOffset));
It would be good to put a comment in RenderWidget referencing this snapping. Are there any other computeRectForRepaint impls that needs this change?
> LayoutTests/ChangeLog:16 > + * platform/mac/fast/images/repaint-subrect-grid-expected.txt: repaint rect tracking change. > + * platform/mac/fast/repaint/hidpi-absolute-positioned-element-wrong-cliprect-after-move-expected.txt: Added. repaint rect tracking change. > + * platform/mac/fast/repaint/hidpi-device-pixel-based-repaint-rect-tracking-expected.txt: Added. repaint rect tracking change. > + * platform/mac/fast/repaint/hidpi-transform-on-subpixel-repaintrect-expected.txt: Added. repaint rect tracking change.
These should go in the cross-platform dir.
Build Bot
Comment 5
2014-12-16 13:27:27 PST
Comment on
attachment 243380
[details]
Patch
Attachment 243380
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4698876044902400
New failing tests: fast/repaint/hidpi-content-inside-iframe-leaves-trails.html fast/repaint/hidpi-transform-on-subpixel-repaintrect.html fast/repaint/hidpi-absolute-positioned-element-wrong-cliprect-after-move.html fast/images/repaint-subrect-grid.html fast/repaint/hidpi-device-pixel-based-repaint-rect-tracking.html
Build Bot
Comment 6
2014-12-16 13:27:31 PST
Created
attachment 243385
[details]
Archive of layout-test-results from ews105 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 7
2014-12-16 13:46:39 PST
Created
attachment 243389
[details]
Patch
alan
Comment 8
2014-12-16 13:48:46 PST
Repaint rect tracking behavior change is moved here:
bug 139703
Build Bot
Comment 9
2014-12-16 14:18:05 PST
Comment on
attachment 243389
[details]
Patch
Attachment 243389
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4530429575036928
New failing tests: fast/repaint/hidpi-content-inside-iframe-leaves-trails.html
Build Bot
Comment 10
2014-12-16 14:18:09 PST
Created
attachment 243394
[details]
Archive of layout-test-results from ews105 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 11
2014-12-16 15:28:08 PST
Created
attachment 243399
[details]
Patch
WebKit Commit Bot
Comment 12
2014-12-16 16:50:06 PST
Comment on
attachment 243399
[details]
Patch Clearing flags on attachment: 243399 Committed
r177412
: <
http://trac.webkit.org/changeset/177412
>
WebKit Commit Bot
Comment 13
2014-12-16 16:50:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug