Subpixel rendering: Animating HTML elements leaves trails when embedded to a subpxiel positioned iframe. https://bugs.webkit.org/show_bug.cgi?id=139691 rdar://problem/19078958

Reviewed by Simon Fraser.

This patch ensures that repaint rect and actual paint coordinate calculations are in sync.

Source/WebCore:

RenderWidget painting still snaps final coordinates to integral positions. We need to
mimic the same snapping behaviour when the repaint rects are being calculated so that
they are in sync with the final repaint rects. This is a workaround until after
widgets get pushed to device pixel positions.

Test: fast/repaint/hidpi-content-inside-iframe-leaves-trails.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeRectForRepaint):
* rendering/RenderView.cpp:
(WebCore::RenderView::repaintViewRectangle):
* rendering/RenderWidget.cpp:
(WebCore::RenderWidget::paintContents):

LayoutTests:

* fast/repaint/hidpi-content-inside-iframe-leaves-trails-expected.txt: Added.
* fast/repaint/hidpi-content-inside-iframe-leaves-trails.html: Added.


Canonical link: https://commits.webkit.org/157612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177412 268f45cc-cd09-0410-ab3c-d52691b4dbfc